--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "vue-html2pdf": "^1.8.0",
     "vue-router": "^4.1.2",
     "vue3-html2pdf": "^1.1.2",
+    "vuetify": "^3.0.1",
     "xmldom": "^0.6.0"
   },
   "devDependencies": {
